[package]
name = "discordbot"
version = "0.1.0"
authors = ["Golden Epsilon"]
edition = "2024"

[dependencies]
dotenv = "0.15.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
